# nessai

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  .readthedocs.yml  CHANGELOG.md  CONTRIBUTING.md  LICENSE.md  README.md  ci_environment.yaml  codecov.yml  dev_requirements.txt  environment.yaml  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: compatibility-tests.yml  integration-tests.yml  lint.yml  publish-to-pypi.yml  publish-to-test-pypi.yml  tests.yml
docs/: .gitignore  analytic-priors.rst  bilby-example.rst  code-overview.rst  conf.py  discrete-parameters.rst  faqs.rst  further-details.rst  gaussian-example.rst  gravitational-wave-inference.rst  importance-nested-sampling.rst  index.rst  installation.rst  normalising-flows-configuration.rst  outputs.rst  parallelisation.rst  plugins.rst  proposal-configuration.rst  reparameterisations.rst  requirements.txt  running-the-sampler.rst  sampler-configuration.rst  using-livepoints.rst
docs/scripts/: example_run.py
docs/source/: modules.rst  nessai.flows.rst  nessai.gw.rst  nessai.rst
examples/: 2d_gaussian.py  augmented_example.py  bilby_example.py  bilby_unbounded_priors.py  bimodal_example.py  categorical_example.py  conditional_example.py  corner_plot_example.py  discrete_example.py  discrete_parameter.py  eggbox.py  gw_example.py  half_gaussian.py  importance_sampling.py  mcmc_example.py  parallelisation_example.py  ray_2d_gaussian.py  reparameterisations_example.py  rosenbrock.py  unbounded_prior.py
examples/conditional_examples/: bilby_categorical_example.py  bilby_conditional_on_parameters.py  categorical_example.py  conditional_on_likelihood.py  conditional_on_parameters.py
examples/gw/: basic_gw_example.py  calibration_example.py  full_gw_example.py  importance_gw_example.py  ins_gw_example.py  legacy_gw_example.py
examples/importance/: basic_importance_example.py  bilby_importance_example.py
examples/importance_nested_sampler/: basic_ins_example.py  hypercube_prior.py  nsf_unit_hypercube.py  rebalance.py
flowproposal/: __init__.py  flowmodel.py  flowproposal.py  flows.py  flowsampler.py  livepoint.py  model.py  nestedsampler.py  plot.py  posterior.py  proposal.py  utils.py
flowproposal/flows/: __init__.py  distributions.py  nsf.py  realnvp.py  utils.py
flowproposal/gw/: proposal.py  utils.py
flowproposal/legacy/: __init__.py  flowmodel.py  flows.py  proposal.py
nessai/: __init__.py  basesampler.py  config.py  distributions.py  dynamic.py  evidence.py  flowmodel.py  flowsampler.py  importancesampler.py  livepoint.py  model.py  nestedsampler.py  plot.py  posterior.py  priors.py  proposal.py  reparameterisations.py  utils.py
nessai/flowmodel/: __init__.py  base.py  clustering.py  config.py  importance.py  utils.py
nessai/flows/: __init__.py  base.py  base_nflows.py  base_pyro.py  distributions.py  maf.py  nets.py  nlsq.py  nsf.py  realnvp.py  transforms.py  utils.py
nessai/gw/: __init__.py  legacy.py  priors.py  proposal.py  reparameterisations.py  utils.py
nessai/posterior/: __init__.py  draw.py  weights.py
nessai/proposal/: __init__.py  analytic.py  augmented.py  base.py  clustering.py  conditional.py  flowproposal.py  importance.py  rejection.py  utils.py
nessai/reparameterisations/: __init__.py  angle.py  base.py  combined.py  discrete.py  null.py  periodic.py  rescale.py  utils.py
nessai/samplers/: __init__.py  base.py  importancesampler.py  nestedsampler.py
nessai/testing/: __init__.py  proposal.py
nessai/utils/: __init__.py  bilbyutils.py  distance.py  distributions.py  hist.py  indices.py  information.py  io.py  logging.py  multiprocessing.py  optimise.py  plugins.py  rescaling.py  sampling.py  settings.py  sorting.py  spatial.py  stats.py  structures.py  testing.py  threading.py  torchutils.py
src/nessai/: config.py  evidence.py  flowsampler.py  livepoint.py  model.py  nestedsampler.py  plot.py  posterior.py  stopping_criteria.py
tests/: conftest.py  test_base_sampler.py  test_bilby_compatibility.py  test_config.py  test_deprecation_warnings.py  test_distributions.py  test_evidence.py  test_flowmodel.py  test_flowsampler.py  test_gw_utils.py  test_livepoint.py  test_model.py  test_ns_state.py  test_plot.py  test_posterior.py  test_priors.py  test_proposal.py  test_sampling.py  test_stopping_criteria.py  test_utils.py  test_version.py
tests/test_evidence/: test_evidence_utils.py  test_importance_evidence.py  test_ins_evidence.py  test_standard_evidence.py
tests/test_flowmodel/: test_clustering.py  test_flowmodel_base.py  test_flowmodel_importance.py  test_flowmodel_utils.py
tests/test_flows/: test_base_flow.py  test_distributions.py  test_flow_transforms.py  test_flow_utils.py  test_included_flows.py  test_nets.py  test_nsf.py  test_pyro_flows.py  test_specific_flows.py
tests/test_gw/: conftest.py  test_distance_converters.py  test_equivalent_proposal.py  test_gw_legacy.py  test_gw_proposal.py  test_gw_reparameterisations.py  test_gw_utils.py  test_reparameterisation_integration.py
tests/test_importance_sampler/: conftest.py  test_ins_stopping.py
tests/test_nested_sampler/: conftest.py  test_core_sampling.py  test_dynamic.py  test_flow.py  test_flow_proposal.py  test_general_config.py  test_importance_sampling.py  test_live_points.py  test_manage_state.py  test_ns_plotting.py  test_properties.py  test_proposal_config.py  test_resume.py  test_yield_sample.py
tests/test_posterior/: test_draw.py  test_weights.py
tests/test_proposal/: test_analytic.py  test_augmented.py  test_base_proposal.py  test_conditional.py  test_flowproposal.py  test_pool.py  test_rejection.py  test_utils.py
tests/test_reparameterisations/: conftest.py  test_all_reparams.py  test_angle.py  (+13 more)
(+183 files in other folders)
