[metadata]
name = nessai
description = Nessai: Nested Sampling with Aritificial Intelligence
long_description = file: README.md
long_description_content_type = text/markdown
author = Michael J. Williams
author_email = m.williams.4@research.gla.ac.uk
url = https://github.com/mj-will/nessai
project_urls =
    Documentation = https://nessai.readthedocs.io/
classifiers =
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
keywords = nested sampling, normalising flows, machine learning

[options]
packages = find:
python requires = >=3.7
install_requires =
    numpy>=1.9
    pandas
    matplotlib>=2.0
    seaborn
    scipy>=0.16
    torch>=1.7.0
    tqdm
    nflows

[options.extras_require]
test =
    pytest
    pytest-cov
    pytest-timeout
    pytest-rerunfailures
    pytest-integration
gw =
    lalsuite
    bilby
    astropy
dev =
    pre-commit
    ray[default]
    corner
docs =
    sphinx
    sphinx_rtd_theme
    numpydoc
    sphinx-autoapi

[codespell]
ignore-words-list = hist, nessai
